# memvault-os

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  README.zh.md
apps/api/: Dockerfile  README.md  alembic.ini  pyproject.toml
apps/api/alembic/: env.py
apps/api/alembic/versions/: 0001_init_memvault_os.py
apps/api/src/: __init__.py  audit_stub.py  auth_stub.py  config_stub.py  main.py
apps/api/src/events_stub/: __init__.py  bus.py  types.py
apps/api/src/kg_ops/: __init__.py  community.py  community_prompts.py  normalize.py  pagerank.py  predicates.py  triple_extract.py
apps/api/src/memvault/: README.en.md  README.md  __init__.py  conflict_resolver.py  content_normalizer.py  crag_evaluator.py  curate.py  dedup.py  deps.py  dream.py  embedding.py  entity_resolution.py  events.py  fold_verifier.py  frontier.py  grc_adapter.py  ground_truth.py  injection_guard.py  interest_profile.py  kg_auto_evolve.py  kg_config.py  kg_models.py  kg_routes.py  kg_schemas.py  kg_services.py  lint.py  llm_config.py  llm_models.py  models.py  pipeline_config.py  query_archetypes.py  query_expander.py  query_router.py  query_runtime.py  reactive_adapters.py  reflection.py  reranker.py  routes.py  scale_service.py  schemas.py  (+8 more)
apps/api/src/sdk_client/: timeout.py
apps/api/src/shared/: __init__.py  access_tracker.py  actions.py  cache.py  capabilities.py  conflict.py  database.py  decay.py  dedup_types.py  deps.py  embedding.py  errors.py  grc.py  (+24 more)
apps/api/tests/: conftest.py  test_e2e_api.py  test_install_scripts.py  test_smoke.py
(+184 files in other folders)
