[project]
name = "memvault-os-api"
version = "0.1.0"
description = "Open-source build of the Workshop memvault module — long-term memory + KG + semantic recall."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "JonesHong" }]

dependencies = [
  # Web
  "fastapi>=0.115",
  "uvicorn[standard]>=0.30",
  # Validation / config
  "pydantic>=2.8",
  "pydantic-settings>=2.4",
  # Database
  "sqlalchemy[asyncio]>=2.0",
  "asyncpg>=0.29",
  "alembic>=1.13",
  # Cache / events
  "redis>=5.0",
  # Vector store
  "qdrant-client>=1.10",
  # LLM
  "pydantic-ai[openai]>=0.0.14",
  "httpx>=0.27",
  # Graph / NLP
  "igraph>=0.11",
  "jieba>=0.42.1",
  "snowballstemmer>=2.2",
  # IDs
  "uuid-utils>=0.9",
]

[project.optional-dependencies]
dev = [
  "ruff>=0.6",
  "pytest>=8.3",
  "pytest-asyncio>=0.23",
  "pytest-cov>=5.0",
  "mypy>=1.11",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "RUF"]
ignore = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests", "src/memvault/tests"]
pythonpath = ["src"]
